Add missing module descriptor to `assertj-guava`, adopt module-only build (#3771)
The integration tests in `assertj-core-spring-boot` remain on classpath testing due to the lack of module system support by some Spring Boot transitive dependencies.

Co-authored-by: Daniel Lobão <lobaorn@users.noreply.github.com>
Co-authored-by: Christian Stein <sormuras@users.noreply.github.com>